# bgc_drifter_tools

./: .gitignore  CODE_DESCRIPTION.md  DEV_STATUS.md  LICENSE  PIPELINE.md  README.md  STATISTICS.md  USAGE_MANUAL.md  pyproject.toml
analysis_config/: analysis_config_min.yml  analysis_config_min_no_sal.yml  config_phys.yml
examples/: 01_load_and_merge.py  02_inspect_mat.py  03_check_mat_db.py  04_build_master.py  05_clean_drifter_raw.py  06_normalize_drifter_db.py  07_clean_wind_raw.py  08_normalize_wind_db.py  09_build_master_example.py
src/bgcd/: __init__.py  bbp_io.py  cli_master.py  cli_matdb.py  cli_oxygen.py  cli_prepare_bbp.py  cli_prepare_drifter.py  cli_prepare_wind.py  io.py  master.py  mat_io.py  oxygen_io.py  plot_master.py  plot_med_map.py  raw_split.py  test_anomaly.py
src/bgcd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bgcd/analysis/: __init__.py  cli_coupling.py  cli_lag_corr.py  cli_pca.py  cli_pca_cluster.py  cli_phys_regime_lag.py  cli_pipeline.py  cli_qc.py  cli_rolling_corr.py  cli_window.py  coupling.py  lag_corr.py  overlap.py  pca.py  preprocess.py  qc_core.py  qc_sandbox.py  rolling_corr.py
