[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgcd"
version = "0.1.0"
description = "Tools for preprocessing and analyzing biogeochemical drifter datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name="CNR-ISMAR / BGC-SVP team"}]
dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "netCDF4",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pyarrow",
  "scipy",
  "h5py",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
